# Streamlet-Templates

./: README.md
templates/go-rest-api/: .env.example  README.md  go.mod  main.go
templates/java-rest-api/: README.md  pom.xml
templates/java-rest-api/src/main/java/in/streamlet/templates/: StreamletController.java  StreamletJavaRestApiApplication.java
templates/java-rest-api/src/main/resources/: application.properties
templates/nextjs-image-upload/: README.md  package-lock.json  package.json
templates/nextjs-image-upload/app/: globals.css  layout.tsx  page.tsx
templates/nextjs-image-upload/types/: streamlet-sdk.d.ts
templates/nextjs-player/: .env.example  README.md  package-lock.json  package.json
templates/nextjs-player/app/: globals.css  layout.tsx  page.tsx
templates/nextjs-player/types/: streamlet-sdk-react.d.ts
templates/nextjs-video-upload/: .env.example  README.md  package-lock.json  package.json
templates/nextjs-video-upload/app/: globals.css  layout.tsx  page.tsx
templates/nextjs-video-upload/types/: streamlet-sdk.d.ts
templates/nodejs-express-rest-api/: README.md  package.json  server.js
templates/python-rest-api/: README.md  app.py  requirements.txt
templates/rust-rest-api/: Cargo.toml  README.md
templates/rust-rest-api/src/: main.rs
