[package]
name = "streamlet-rust-rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["multipart"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.9", features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }

